# cifar10_classifier

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  infer.py  pyproject.toml  train.py
.dvc/: config
cifar10_classifier/: data.py  infer.py  main.py  model.py  train.py
configs/: config.yaml
